Contact: fix spacing; Publications: cleanup

--- a/src/scss/_general.sass
+++ b/src/scss/_general.sass
@@ -232,10 +232,10 @@ $ucr-navy:    #003066
     vertical-align: -webkit-baseline-middle
 
 .container
-    @include media-breakpoint-only(md)
+    @include media-breakpoint-up(sm)
         max-width: 90%
-    @include media-breakpoint-only(sm)
-        max-width: 90%    
+    @include media-breakpoint-only(lg)
+        max-width: 94%            
 
 
 
